# docs/swagger.yaml
@@ -110,6 +110,48 @@ paths:
       summary: Register New User
       tags:
       - Auth
+  /products:
+    get:
+      parameters:
+      - in: query
+        name: category
+        type: string
+      - default: 10
+        in: query
+        name: limit
+        type: integer
+      - default: 1
+        in: query
+        name: page
+        type: integer
+      - description: using regex
+        in: query
+        name: search
+        type: string
+      - default: created_at
+        in: query
+        name: sort_by
+        type: string
+      - default: desc
+        in: query
+        name: sort_order
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/rest.BaseJSONResp'
+            - properties:
+                data:
+                  additionalProperties: true
+                  type: object
+              type: object
+      security:
+      - BearerAuth: []
+      summary: get product list
+      tags:
+      - Product
 securityDefinitions:
   BearerAuth:
     in: header
